Bug 336615: shouldn't use magic numbers for junk status r=standard8, sr=neil